# holiday

./: .gitignore  .rsync-filter  CMakeLists.txt  README.md  description.txt  displayList.cpp  displayList.hpp  listPersons.cpp  listPersons.hpp  main.cpp  menu.cpp  menu.hpp  mysql_connect.c  mysql_connect.h  path.h.in  personsDisplayList.cpp  personsDisplayList.hpp  version.h.in  version.hpp.in
app/: CMakeLists.txt  Makefile  cmake_install.cmake  version.hpp
app/src/: SQL.txt  cl_parametrs.cpp  cl_parametrs.hpp  data_from_sql.cpp  data_from_sql.hpp  displayList.cpp  displayList.hpp  listPersons.cpp  listPersons.hpp  listUnits.cpp  listUnits.hpp  main.cpp  menu.cpp  menu.hpp  mysql_connect.c  parent_menu.cpp  parent_menu.hpp  personsDisplayList.cpp  settings.xml  str_from_file.cpp  str_from_file.hpp  tholiday.cpp  tholiday.hpp  times.cpp  times.hpp  unitsDisplayList.cpp  unitsDisplayList.hpp
src/: cl_parametrs.cpp  cl_parametrs.hpp  displayList.cpp  displayList.hpp  listPersons.cpp  listPersons.hpp  main.cpp  menu.cpp  menu.hpp  personsDisplayList.cpp  personsDisplayList.hpp
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tests/src/: display_lists.cpp  string_test.cpp  xml_test.cpp
